# Lumine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  Makefile  Makefile.lumine  QUICKSTART.txt  README.md  docker-compose.db.yml  go.mod  go.sum  index.html  install.ps1  install.sh  main.go  package-lock.json  package.json  run.sh  vite.config.ts
.agents/: AGENTS.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  release.yml  test.yml
.kiro/: rules.md
cmd/cleanup/: README.md  main.go
docs/: API.md  DATABASE.md  GUI_INTEGRATION.md  INSTALLATION.md  MAKEFILE.md  PORT_MANAGEMENT.md  QUICKSTART.md  RESPONSIVE_DESIGN.md  TUI_IMPROVEMENTS.md  TUI_LAYOUT.md  UI_SHOWCASE.md  UI_UX_IMPROVEMENTS_v2.md  WEBSERVERS.md
internal/compose/: generator.go
internal/config/: config.go
internal/database/: manager.go
internal/docker/: cleanup.go  docker.go  dockerhub.go  validator.go
internal/domain/: manager.go
internal/nginx/: config.go
internal/port/: manager.go  manager_test.go
internal/project/: manager.go  templates.go
internal/runtime/: manager.go
internal/ui/: cleanup_dialog.go  create_project.go  (+10 more)
scripts/: cleanup-lumine.sh  install_lumine.sh
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  hosts_manager.rs  lib.rs  mkcert_manager.rs  project_manager.rs  proxy_manager.rs  service.rs  settings_manager.rs  setup_manager.rs  stack_manager.rs  utils.rs
(+76 files in other folders)
