[package]
name = "lumine"
version = "0.1.0"
description = "Lumine - Universal Background Service Manager"
authors = ["Ararya Arka Anugraha"]
license = "AGPL-3.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = "0.4"
tauri = { version = "2.11.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
shell-words = "1.1.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-autostart = "2.5.1"
opener = "0.8.5"
reqwest = { version = "0.12", features = ["blocking", "json"] }
open = "5.3.6"
tauri-plugin-fs = "2.0.0"
tokio = { version = "1", features = ["process", "time"] }
